--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         -->
         <div class="col-12 col-sm-8 col-md-9 col-lg-10 my-3 header-content">
           <h1 class="fw-bolder">Fabian van den Brand</h1>
-          <h5 class="fst-italic tagline">Your expert in creative marketing.</h5>
+          <h5 class="fst-italic tagline">Your expert in content creation</h5>
         </div>
       </header>
 
@@ -76,7 +76,7 @@
           -->
           <section class="my-3 biography-section">
             <h2>Professional Experience</h2>
-            <!--
+<!--
               Each list item (li) in the unordered list (ul) below will be one job.
               "list-unstyled" is a class that hides the bullet points of a list.
             -->
