--- a/index.html
+++ b/index.html
@@ -179,14 +179,14 @@
               <li class="contact-item">
                 <a class="d-flex align-items-center" href="mailto:email@buas.nl" target="_blank">
                   <img class="contact-icon" src="images/icons/envelope.svg" alt="Email">
-                  email@buas.nl
-                </a>
+                info@branddynamic.online
+              </a>
               </li>
               <li class="contact-item">
                 <a class="d-flex align-items-center" href="https://facebook.com/" target="_blank">
                   <img class="contact-icon" src="images/icons/facebook.svg" alt="Facebook">
-                  Facebook Profile
-                </a>
+                Fabian van den Brand
+              </a>
               </li>
               <li class="contact-item">
                 <a class="d-flex align-items-center" href="https://github.com/" target="_blank">
@@ -197,8 +197,7 @@
               <li class="contact-item">
                 <a class="d-flex align-items-center" href="tel:+31612345678" target="_blank">
                   <img class="contact-icon" src="images/icons/phone.svg" alt="Mobile Phone">
-                  +31 6 12345678
-                </a>
+                +31 6 19495229&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; </a>
               </li>
             </ul>
           </section>
