--- a/index.html
+++ b/index.html
@@ -249,8 +249,8 @@
             <h2>Other Skills</h2>
             <ul class="skill-list list-unstyled">
               <li class="skill-item">Team player</li>
-              <li class="skill-item">Microsoft Office Power User</li>
-              <li class="skill-item">Driving Licence</li>
+              <li class="skill-item">Real leader&nbsp;&nbsp;</li>
+              <li class="skill-item">High productivity</li>
             </ul>
           </section>
 
@@ -259,8 +259,8 @@
           <section class="my-3 aside-section">
             <h2>Interests &amp; Hobbies</h2>
             <ul class="skill-list list-unstyled">
-              <li class="skill-item">Formula 1 Driver</li>
-              <li class="skill-item">Netflix Binge-Watcher</li>
+              <li class="skill-item">Formula 1 Enthousiast</li>
+              <li class="skill-item">Carnival Float Builder&nbsp;</li>
             </ul>
           </section>
 
