Changed all of the links in Contact Tab

--- a/index.html
+++ b/index.html
@@ -177,21 +177,21 @@
             -->
             <ul class="contact-list list-unstyled">
               <li class="contact-item">
-                <a class="d-flex align-items-center" href="mailto:email@buas.nl" target="_blank">
+                <a class="d-flex align-items-center" href="mailto:info@branddynamic.online" target="_blank">
                   <img class="contact-icon" src="images/icons/envelope.svg" alt="Email">
                 info@branddynamic.online
               </a>
               </li>
               <li class="contact-item">
-                <a class="d-flex align-items-center" href="https://facebook.com/" target="_blank">
+                <a class="d-flex align-items-center" href="https://facebook.com/profile.php?id=100009534337492" target="_blank">
                   <img class="contact-icon" src="images/icons/facebook.svg" alt="Facebook">
                 Fabian van den Brand
               </a>
               </li>
               <li class="contact-item">
-                <a class="d-flex align-items-center" href="https://github.com/" target="_blank">
-                  <img class="contact-icon" src="images/icons/github.svg" alt="LinkedIn">
-                  GitHub Profile
+                <a class="d-flex align-items-center" href="https://www.linkedin.com/in/fabian-van-den-brand-47ba94248/" target="_blank">
+                  <img class="contact-icon" src="images/icons/linkedin.svg" alt="LinkedIn">
+                  Fabian van den Brand
                 </a>
               </li>
               <li class="contact-item">
