Changed all of the pictures of the Experiences and Education Tab and added new rows of information

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               <li class="biography-item row mb-2">
                 <!-- We're using a grid inside a grid so we can align logos and text -->
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
-                  <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/projector.svg" alt="Company logo" width="80">
+                  <img class="biography-logo mw-100 d-block mx-auto" src="../../Brand Dynamic/Logo Brand Dynamic/Logo Bestanden/Logo7.jpg" alt="Company logo" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                   <h4>Business Owner: Brand Dynamic</h4>
@@ -104,11 +104,16 @@
               <li class="biography-item row mb-2">
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
                 <!-- We're using a grid inside a grid so we can align logos and text -->
-                  <img class="biography-logo mw-100 d-block mx-auto" src="images/employers/trolley.svg" alt="Company logo" width="80">
+                  <img class="biography-logo mw-100 d-block mx-auto" src="../../../Afbeeldingen/ALP.jpg" alt="Company logo" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                   <h4>Production worker: All Liquids Piping&nbsp;</h4>
                   <h5>March 2020 - April 2021&nbsp;</h5>
+					<ul class="biography-details list-unstyled">
+                    <li>Assembling hoses </li>
+                    <li>Logistic orderpicking&nbsp;</li>
+                    <li>Preparing and reparing&nbsp;</li>
+                  </ul>
                   <!-- This entry doesn't have a list of achievements, but you can copy-paste the one from above -->
                 </div>
               </li>
@@ -132,9 +137,9 @@
                   <h5>2018&nbsp;&ndash;&nbsp;now</h5>
                   <!-- Use the list below to talk about minors, exchanges, extra-curricular activities. -->
                   <ul class="biography-details list-unstyled">
-                    <li>Member of the student participation council</li>
-                    <li>Minor in resilient entrepreneurship</li>
-                    <li>Exchange with Bournemouth University</li>
+                    <li>Made a high quality short movie</li>
+                    <li>Expanded my level of the English language</li>
+                    <li>Created a clear vision of my future</li>
                   </ul>
                 </div>
               </li>
@@ -142,13 +147,15 @@
               <!-- 2nd item in education -->
               <li class="biography-item row mb-2">
                 <div class="logo-container col-3 col-sm-2 col-md-3 col-lg-2">
-                  <img class="biography-logo mw-100 d-block mx-auto" src="images/schools/school.svg" alt="School logo" width="80">
+                  <img class="biography-logo mw-100 d-block mx-auto" src="../../../Afbeeldingen/GraafEngelbrecht.jfif" alt="School logo" width="80">
                 </div>
                 <div class="biography-contents col-9 col-sm-10 col-md-9 col-lg-10">
                   <h4>High School Diploma, Graaf Engelbrecht</h4>
                   <h5>2016 - 2020</h5>
                   <ul class="biography-details list-unstyled">
                     <li>Havo, Culture &amp; Society</li>
+					  <li>Made the first steps in becoming a professional</li>
+					  <li>Made new friends and handled new experiences</li>
                   </ul>
                 </div>
               </li>
